--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           class="footer__link twitter-link"
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
-          >Chieke Chukwuemeka</a
+          >Chieke Chukwuemeka Sochima</a
         >
       </p>
     </footer>
